# runelite-debug-plugin

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  runelite-plugin.properties
.github/workflows/: build.yml
docs/: collections.js  index.html  index.js
native/: CMakeLists.txt
native/src/: jnizstd.cpp  misc.cpp  profiler.cpp
src/main/java/abex/os/debug/: CoreDumpPanel.java  DebugConfig.java  DebugPanel.java  DebugPlugin.java  FeedbackButton.java  HProfStripper.java  HeapDumpPanel.java  KeybindsPanel.java  LengauerTarjan.java  ManagementPanel.java  MiscNative.java  Profiler.java  ProfilerPanel.java  RetainedSizeAnalyzer.java  SeekFile.java  StacktracePanel.java  VMConfigPatch.java  VirtualMemoryPanel.java  ZstdOutputStream.java
src/main/resources/natives/macos-universal/: libProfiler.dylib
src/test/java/abex/os/debug/: DebugPluginTest.java  HProfStripperButIntellijIsBroken.java  ProfilerTest.java
